# gester

./: CMakeLists.txt  Makefile  README.md  config.h  main.cpp  touch-gestures.cpp  touch-gestures.h
